--- a/src/componentes/css/Home.css
+++ b/src/componentes/css/Home.css
@@ -1,19 +1,18 @@
-
 .home-container {
-    text-align: center;
-  }
+  text-align: center;
+  margin-top: -10px; /* Ajusta este valor según lo necesites */
+}
 
-  .home-container h2 {
-    font-size: 50px;
-    margin-bottom: 30px;
-    font-family: monospace;
-    font-weight: bold;
-  }
-  
-  .home-container p {
-    font-size: 24px;
-    margin-bottom: 30px;
-  }
-  
+.home-container h2 {
+  font-size: 50px;
+  font-family: monospace;
+  font-weight: bold;
+}
+
+.home-container p {
+  font-size: 24px;
+  margin-bottom: 30px;
+}
+
 
   
