--- a/src/componentes/css/login.css
+++ b/src/componentes/css/login.css
@@ -5,16 +5,17 @@
   .card {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #d9d9d9; /* Fondo blanco para la tarjeta */
+    background-color: #929292; /* Fondo blanco para la tarjeta */
     border-color: #242424;
   }
   
   .card h2 {
-    color: #ff0000; /* Color del título */
+    color: #000000; /* Color del título */
   }
   
   .form-label {
-    color: #555555; /* Color de las etiquetas de los campos de formulario */
+    color: #000000; /* Color de las etiquetas de los campos de formulario */
+    text-shadow: #242424;
   }
   
   .form-control {
@@ -28,7 +29,7 @@
   }
   
   .btn-primary {
-    background-color: #007bff; /* Color del botón */
+    background-color: #234e7c; /* Color del botón */
     border-color: #007bff; /* Borde del botón */
   }
   
