--- a/src/componentes/css/Home.css
+++ b/src/componentes/css/Home.css
@@ -1,6 +1,6 @@
 .home-container {
   text-align: center;
-  margin-top: -10px; /* Ajusta este valor según lo necesites */
+  margin-top: -50px;
 }
 
 .home-container h2 {
