--- a/src/componentes/css/Footer.css
+++ b/src/componentes/css/Footer.css
@@ -1,6 +1,11 @@
-/* Footer.css */
+
+.container-empty{
+  background-color: black;
+}
+
 footer {
   color: #ffffff !important;
+text-align: center;
 }
 
 footer a {
@@ -10,3 +15,4 @@ footer a {
 footer .nav-link {
   color: #ffffff;
 }
+
