--- a/src/componentes/css/GrillaInstrumentos.css
+++ b/src/componentes/css/GrillaInstrumentos.css
@@ -1,9 +1,7 @@
 .container {
-    margin: 20px auto;
-    padding: 20px;
-    border: 1px solid #242424;
+    border: none;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: none;
 }
 
 .row {
