--- a/src/componentes/css/InstrumentoForm.css
+++ b/src/componentes/css/InstrumentoForm.css
@@ -5,10 +5,9 @@
     justify-content: center;
     margin: 50px auto;
     width: 100%;
-    border: 1px solid #ccc;
-    padding: 20px;
+    border:none;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: none;
 }
 
 .mb-3 {
@@ -17,6 +16,7 @@
 
 .form-label {
     font-weight: bold;
+    color: #ffffff;
 }
 
 .form-control {
