--- a/src/componentes/css/ListaInstrumentos.css
+++ b/src/componentes/css/ListaInstrumentos.css
@@ -59,3 +59,14 @@
     font-weight: normal;
     font-size: 20px;
 }  
+
+.btn btn-primary {
+    background-color: transparent;
+    border-color:none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 10px;
+}
